--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@ckeditor/ckeditor5-react": "^9.2.0",
     "ckeditor5": "^43.1.0",
     "ckeditor5-premium-features": "^43.1.0",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.13",
+    "express": "^4.21.0",
     "html-react-parser": "^5.1.16",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.6.4",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
