--- a/package.json
+++ b/package.json
@@ -11,20 +11,28 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^43.1.0",
     "@ckeditor/ckeditor5-react": "^9.2.0",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "ckeditor5": "^43.1.0",
     "ckeditor5-premium-features": "^43.1.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "express": "^4.21.0",
     "html-react-parser": "^5.1.16",
+    "is-hotkey": "^0.2.0",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.4",
     "next": "14.2.13",
     "react": "^18",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
+    "react-quill": "^2.0.0",
+    "slate-history": "^0.109.0",
+    "slate-react": "^0.110.1",
     "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
